final submission for project. Fixed whitespace in code and deleted extraneous comments

--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-/* palette:
-
-9381ff = tropical indigo
-
-*/
 
 * {
     box-sizing: border-box;
@@ -10,8 +5,6 @@
     color: #042a2b;
     text-shadow: 1 1 1px black;
     border-radius: 10px;
-    
-    
 }
 
 body{
@@ -26,12 +19,10 @@ body{
 
 header {
     align-self: flex-start
-
 }
 
 h1 {
     color: #042a2b;
-    
 }
 
 h2 {
@@ -39,11 +30,9 @@ h2 {
     height: 20%;
     width: 50%;
     margin: 5px;
-    
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 h3 {
@@ -57,17 +46,12 @@ h3 {
     justify-content: center;
     flex-wrap: wrap;
     align-content: space-evenly
-    
-    
 }
 
 .meters {
     margin: 5px;
     padding: 5px;
-    
 }
-
-
 
 section {
     display: flex;
@@ -81,15 +65,7 @@ section {
     padding: 10px;
     border: 1px solid #042a2b;
     box-shadow: 0 0 8px black;
-   
-    
     display: flex;
     justify-content: center;
-    
-    
-
 }
 
-/* .inputButtons {
-
-} */
